--- a/src/main/resources/META-INF/resources/static/login.html
+++ b/src/main/resources/META-INF/resources/static/login.html
@@ -8,41 +8,41 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
 		
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/font-awesome.min.css">
 
 		
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/smartadmin-production-plugins.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/smartadmin-production-plugins.min.css">
 		
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/smartadmin-production.min.css">
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/smartadmin-skins.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/smartadmin-production.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/smartadmin-skins.min.css">
 
 		
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/smartadmin-rtl.min.css"> 
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/smartadmin-rtl.min.css"> 
 
 		
-		<link rel="stylesheet" type="text/css" media="screen" href="/hrms/static/css/demo.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="/AgentWeb/static/css/demo.min.css">
 
 		
-		<link rel="shortcut icon" href="/hrms/static/img/favicon/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/hrms/static/img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/AgentWeb/static/img/favicon/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/AgentWeb/static/img/favicon/favicon.ico" type="image/x-icon">
 
 		
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">
 
-		<link rel="apple-touch-icon" href="/hrms/static/img/splash/sptouch-icon-iphone.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/hrms/static/img/splash/touch-icon-ipad.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/hrms/static/img/splash/touch-icon-iphone-retina.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/hrms/static/img/splash/touch-icon-ipad-retina.png">
+		<link rel="apple-touch-icon" href="/AgentWeb/static/img/splash/sptouch-icon-iphone.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/AgentWeb/static/img/splash/touch-icon-ipad.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/AgentWeb/static/img/splash/touch-icon-iphone-retina.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/AgentWeb/static/img/splash/touch-icon-ipad-retina.png">
 		
 		
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		
 		
-		<link rel="apple-touch-startup-image" href="/hrms/static/img/splash/ipad-landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
-		<link rel="apple-touch-startup-image" href="/hrms/static/img/splash/ipad-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
-		<link rel="apple-touch-startup-image" href="/hrms/static/img/splash/iphone.png" media="screen and (max-device-width: 320px)">
+		<link rel="apple-touch-startup-image" href="/AgentWeb/static/img/splash/ipad-landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)">
+		<link rel="apple-touch-startup-image" href="/AgentWeb/static/img/splash/ipad-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
+		<link rel="apple-touch-startup-image" href="/AgentWeb/static/img/splash/iphone.png" media="screen and (max-device-width: 320px)">
 
 	</head>
 	
@@ -158,29 +158,29 @@
 		</div>
 
 		
-		<script src="/hrms/static/js/plugin/pace/pace.min.js"></script>
+		<script src="/AgentWeb/static/js/plugin/pace/pace.min.js"></script>
 
 	    
 	    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script> if (!window.jQuery) { document.write('<script src="/hrms/static/js/libs/jquery-2.1.1.min.js"><\/script>');} </script>
+		<script> if (!window.jQuery) { document.write('<script src="/AgentWeb/static/js/libs/jquery-2.1.1.min.js"><\/script>');} </script>
 
 	    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-		<script> if (!window.jQuery.ui) { document.write('<script src="/hrms/static/js/libs/jquery-ui-1.10.3.min.js"><\/script>');} </script>
+		<script> if (!window.jQuery.ui) { document.write('<script src="/AgentWeb/static/js/libs/jquery-ui-1.10.3.min.js"><\/script>');} </script>
 
 		
-		<script src="/hrms/static/js/app.config.js"></script>
+		<script src="/AgentWeb/static/js/app.config.js"></script>
 
 			
-		<script src="/hrms/static/js/bootstrap/bootstrap.min.js"></script>
+		<script src="/AgentWeb/static/js/bootstrap/bootstrap.min.js"></script>
 
 		
-		<script src="/hrms/static/js/plugin/jquery-validate/jquery.validate.min.js"></script>
+		<script src="/AgentWeb/static/js/plugin/jquery-validate/jquery.validate.min.js"></script>
 		
 		
-		<script src="/hrms/static/js/plugin/masked-input/jquery.maskedinput.min.js"></script>
+		<script src="/AgentWeb/static/js/plugin/masked-input/jquery.maskedinput.min.js"></script>
 		
 		
-		<script src="/hrms/static/js/app.min.js"></script>
+		<script src="/AgentWeb/static/js/app.min.js"></script>
 
 		<script type="text/javascript">
 			runAllForms();
